<resources>
    <string name="app_name">Tower Of Hanoi</string>
    <string name="StringAction_settings">Settings</string>

    <string name="StringToptext">Hvor raskt klarer du å flytte ringene fra tårn 1 til tårn 3?</string>
    <string name="StringTvToptext2">Velg antall ringer.</string>
    <string name="StringTvAntall_ringer">Antall ringer:</string>
    <string name="StringResultOfSeekbar">4 / 10</string>
    <string name="StringStart">Start</string>
    <string name="StringtvResultofSeekBar">4/10</string>
    <string name="StringAntall_flyt">Antall flyt:</string>
    <string name="String_0_flytt">0 flytt</string>
    <string name="Stringsekunder">Sekunder:</string>
    <string name="String_0_sekunder">0 sekunder</string>
    <string name="StringExample">---</string>
    <string name="String_nytt_spill">Nytt spill</string>
    <string name="String_avslutt">Avslutt</string>
    <string name="String00_00">00:00</string>
    <string name="StringStartTheGameFirst">Du må starte spillet først!</string>
    <string name="StringAntalltrekk">"Antall trekk = "</string>
    <string name="StringStartSpilletPaNytt">Start nytt spill fra menu...</string>
    <string name="StringYouWin">Du har vunnet!!</string>
    <string name="StringTotaltid">"Sum tid brukt i sekunder: "</string>
</resources>