<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/tvToptext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="@string/StringToptext"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvToptext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="@string/StringTvToptext2"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toStartOf="@+id/tvToptext1"
        app:layout_constraintTop_toBottomOf="@+id/tvToptext1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="@string/StringTvAntall_ringer"
        android:textColor="@color/darkgrey"
        app:layout_constraintStart_toStartOf="@+id/tvToptext2"
        app:layout_constraintTop_toBottomOf="@+id/tvToptext2" />

    <TextView
        android:id="@+id/tvResultOfSeekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="4/10"
        android:text="@string/StringResultOfSeekbar"
        android:textColor="@color/darkgrey"
        app:layout_constraintBottom_toTopOf="@+id/seekBarDisks"
        app:layout_constraintEnd_toEndOf="@+id/seekBarDisks"
        app:layout_constraintStart_toStartOf="@+id/seekBarDisks"
        app:layout_constraintTop_toBottomOf="@+id/tvToptext1" />

    <SeekBar
        android:id="@+id/seekBarDisks"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:indeterminate="false"
        android:isScrollContainer="true"
        android:max="10"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tvToptext2" />


    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="400dp"
        android:layout_height="520dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStart">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:id="@+id/btStart"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bt_shape"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/StringStart"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/seekBarDisks"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>